fixed spacing issues

--- a/eventkit_cloud/ui/static/ui/app/components/auth/Login.css
+++ b/eventkit_cloud/ui/static/ui/app/components/auth/Login.css
@@ -18,6 +18,7 @@
     max-width: 500px;
 }
 .form {
+    vertical-align: center;
     margin: 0 auto;
     width: 70%
 }
@@ -26,14 +27,17 @@
     font-size: 20px;
     font-weight: bold;
     color: white;
+    margin: 15px auto 0px auto;
 }
 .enabledButton{
-    margin-top: 30px;
+    margin: 15px;
     margin-left: auto;
+    margin-right: auto;
 }
 .disabledButton{
-    margin-top: 30px;
+    margin: 30px auto 15px auto;
     margin-left: auto;
+    margin-right: auto;
 }
 .disabledButton > div > button {
     background-color: #b4b7b8!important;
@@ -46,9 +50,9 @@
     font-size: 16px!important;
     width: 100%!important;
     height: 45px!important;
-    margin-top: 15px!important;
     color: #e2e2e2!important;
-    padding-left: 10px;
+    margin: 15px auto 0px auto;
+    padding: 10px;
 }
 
 .fieldWrapper > svg {
